Fixed bug introduced while adding comments.

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -335,7 +335,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from tensorflow.contrib.layers import flatten\n",
@@ -622,16 +624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from scipy import misc\n",
-    "import csv\n",
+    "\n",
     "def load_and_display(pic):\n",
-    "    b = misc.imread(pic #load pic from file\n",
+    "    b = misc.imread(pic) #load pic from file\n",
     "    b = b[:,:,:3] # remove alpha layer if there is one\n",
     "    plt.figure(figsize=(2,2))\n",
     "    plt.imshow(b)\n",
@@ -1036,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
